# perpetual-analyst

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  SPEC.md  TODO.md  pyproject.toml  session_ledger.json  try.sh
.codex/agents/: test-plan-writer.toml
.codex/ci/: code-health-remediation.md  doc-freshness-audit.md  doc-freshness-remediation.md  weekly-codebase-checkup.md
.github/: git_notes_template.md  pull_request_template.md
.github/workflows/: ci.yml
config/: settings.yaml  sources.yaml  topics.yaml
docs/: agent-harness.md  architecture.md  changelog.md  commands.md  database.md  environment-gotchas.md  index.md  insights.md  patterns.md  testing.md  ui-design.md
docs/specs/: 2026-07-08-firecrawl-source-extraction-plan.md  2026-07-08-firecrawl-source-extraction.md  2026-07-08-harness-alignment-and-backlog-plan.md  2026-07-08-harness-alignment-and-backlog.md  2026-07-08-pa-nexus-integration-plan.md  README.md  (+4 more)
scripts/: pa_inspect.py
tests/: conftest.py  test_agent.py  test_assemble.py  test_citations.py  test_cli.py  test_compaction.py  test_compaction_review.py  test_config.py  test_daily_run.py  test_delivery.py  test_discovery.py  test_extract.py  test_extract_smoke.py  test_ingestion.py  test_memory.py  test_narrative_schemas.py  test_quality.py  test_render.py  test_report.py  test_retrieval.py  test_rss.py  test_schema_phase5.py  test_schemas.py  test_search.py  test_smoke.py  test_store.py  test_telegram.py  test_theses.py  test_triage.py  test_web_actions.py  test_web_queries.py  test_web_routes.py  test_weekly_run.py
(+65 files in other folders)
