[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perpetual-analyst"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "pypdf>=4.2.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "flask>=3.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
analyst = "perpetual_analyst.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/perpetual_analyst"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not smoke'"
markers = [
    "smoke: live network + API end-to-end test; run explicitly with `pytest -m smoke`",
]
